
An entry should be made for _every_ commit to the repository.
The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date: yyyy/mm/dd
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/12/16 00:15:00 CST
Tag: blume-20051216-cm
Description:

Improved error reporting and handling in CM.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/21 14:00:00 CST
Tag: blume-20051121-html-lib
Description:

Enabling $/html-lib.cm in config/preloads did not work.  This is fixed
now.  (Since the anchor mapping for html-lib.cm is not yet in effect
at the time when config/preloads is processed, the library has to 
be referred to by another name.  In 110.57 this would be
$SMLNJ-LIB/HTML/html-lib.cm.  I arranged for $smlnj/smlnj-lib/html-lib.cm
to be valid as well.)

Thanks to Todd Wilson (Fresno) for alerting me to this issue.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/19 13:45:00 CST
Tag: Release_110_57
Description:

Moved release tag for 110.57.

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/19 23:35:00 CST
Tag: blume-20051119-fish
Description:

Fixed a problem in config/install.sh where it tries to "fish" the
name of the CM metadata directory from the wrong place (because
the physical location of basis.cm has changed).  Also, corrected the
path anchor for $/html-lib.cm.  (Thanks to M. Fluet for pointing out
these problems.)

----------------------------------------------------------------------
Name: Matthias Blume (http://www.tti-c.org/blume/)
Date: 2005/11/16 14:30:00 CST