@@ -13,6 +13,14 @@ Tag: <post-commit CVS tag>
 Description:
 
 ----------------------------------------------------------------------
+Name: John Reppy (http://www.cs.uchicago.edu/~jhr)
+Date: 2006/02/06
+Tag: jhr-20060206-intel-mac
+Description:
+Changes to support MacOS X on Intel hardware.  The C-calls support in
+MLRISC must also be updated to support the MacOS X ABI.
+
+----------------------------------------------------------------------
 Name: Matthias Blume (http://www.tti-c.org/blume/)
 Date: 2005/12/16 00:15:00 CST
 Tag: blume-20051216-cm
